# stt-for-edge-devices

./: .env.example  .gitignore  README.md  genezio.yaml  main.py  pyproject.toml  requirements.txt
data/: transcriptions-test.json
pretrained_models/asr-transformer-transformerlm-librispeech/: asr.ckpt  hyperparams.yaml  lm.ckpt  normalizer.ckpt  tokenizer.ckpt
scripts/: automatic_transcription.py
src/: db.py  dependencies.py  erros.py  fine_tuning_and_optimization.ipynb  main.py  schemas.py
src/api/: enpoints.py  main.py  status.py
src/api/routes/: __init__.py  api_keys.py  chat.py  conversations.py  tts.py
src/api/v1/: __init__.py  chat.py  conversations.py  models.py  tts.py
src/asr/: asr_processor.py  base.py  dataset_processor.py  factory.py  speech_brain.py
src/config/: settings.py
src/core/: chat.py  database.py  memory.py
src/core/interfaces/: repository.py  service.py
src/data/: data_normalizer.py  data_splitter.py  dataset_creator.py  dataset_manager.py
src/data_config/: config.py
src/database/: __init__.py  mongo.py
src/gateways/: elevenlabs.py  huggingface.py  openai.py
src/models/: api.py  base.py  common.py  conversation.py  requests.py  responses.py
src/repositories/: __init__.py  audio.py  base.py  base_mongo.py  conversation.py  memory.py  message.py
src/resource_testing/: run_edge_profiler.py  stt_edge_profiler.py
src/services/: chat.py  conversation.py  memory.py  recognition.py  service_container.py  tts.py
src/utils/: api_keys_service.py  audio_handling.py  audio_storage.py  audio_validation.py
(+14 files in other folders)
